--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           role-to-assume: ${{ env.AWS_DATA_SCHEMA_ROLE }}
           role-session-name: github-schema-upload-session
-          aws-region: ${{ env.AWS_REGION_DEV }}
+          aws-region: ${{ env.AWS_REGION }}
       - name: Create and upload schemas
         run: | 
           python -m pip install -e .
