--- a/.github/workflows/update_schemas.yml
+++ b/.github/workflows/update_schemas.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   update_schemas:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     env:
       OUTPUT_DIR: './schemas'
     steps:
