--- a/.github/workflows/update_schemas.yml
+++ b/.github/workflows/update_schemas.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Create schemas
         run: | 
           python -m pip install -e .
-          python -m aind_data_schema.utils.json_writer --output $OUTPUT_DIR --attach-version
+          python -m aind_data_schema.utils.json_writer --output $OUTPUT_DIR
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
