--- a/.github/workflows/update_schemas.yml
+++ b/.github/workflows/update_schemas.yml
@@ -1,4 +1,4 @@
-name: Upload schemas
+name: Update schemas
 on:
   push:
     branches:
@@ -7,10 +7,8 @@ on:
 jobs:
   update_schemas:
     runs-on: ubuntu-latest
-    # permissions:
-    #   contents: write
     env:
-      OUTPUT_DIR: './schemas'
+      OUTPUT_DIR: 'schemas'
     steps:
       - uses: actions/checkout@v3
         with:
