Deletes exisiting schema folder before creating a new one (#3)
* tests actions for schema version upgrade

* moves update_schema job to tag workflow

* removes existing schemas folder

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -47,7 +47,8 @@ jobs:
         with:
           python-version: 3.8
       - name: Create schemas
-        run: | 
+        run: |
+          rm -rf $OUTPUT_DIR
           python -m pip install -e .
           python -m aind_data_schema.utils.json_writer --output $OUTPUT_DIR
       - name: Commit changes
