--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -32,7 +32,39 @@ jobs:
   #         default_author: github_actions
   #         message: "updates diagrams [skip actions]"
   #         add: '["*.png", "*.rst"]'
+  bump_versions:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ '3.11' ]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ env.DEFAULT_BRANCH }}
+          fetch-depth: 0
+          token: ${{ secrets.SERVICE_TOKEN }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: python -m pip install -e . --no-cache-dir
+      - name: Build current branch schemas
+        run: |
+          mkdir /tmp/branch_schemas
+          python -m aind_data_schema.utils.json_writer --output /tmp/branch_schemas
+          echo "Finished building current branch schemas"
+      - name: Bump schema versions
+        run: python -m aind_data_schema.utils.schema_version_bump --old-schema-folder schemas --new-schema-folder /tmp/branch_schemas --core-schemas-folder src/aind_data_schema/core
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          message: "bumps schema versions [skip actions]"
+          add: 'src'
+
   update_schemas:
+    needs: bump_versions
     runs-on: ubuntu-latest
     env:
       OUTPUT_DIR: 'schemas'
