--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -32,42 +32,11 @@ jobs:
   #         default_author: github_actions
   #         message: "updates diagrams [skip actions]"
   #         add: '["*.png", "*.rst"]'
-  # bump_versions:
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       python-version: [ '3.11' ]
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         ref: ${{ env.DEFAULT_BRANCH }}
-  #         fetch-depth: 0
-  #         token: ${{ secrets.SERVICE_TOKEN }}
-  #     - name: Set up Python ${{ matrix.python-version }}
-  #       uses: actions/setup-python@v3
-  #       with:
-  #         python-version: ${{ matrix.python-version }}
-  #     - name: Install dependencies
-  #       run: python -m pip install -e . --no-cache-dir
-  #     - name: Build current branch schemas
-  #       run: |
-  #         mkdir /tmp/branch_schemas
-  #         python -m aind_data_schema.utils.json_writer --output /tmp/branch_schemas
-  #         echo "Finished building current branch schemas"
-  #     - name: Bump schema versions
-  #       run: python -m aind_data_schema.utils.schema_version_bump --old-schema-folder schemas --new-schema-folder /tmp/branch_schemas --core-schemas-folder src/aind_data_schema/core
-  #     - name: Commit changes
-  #       uses: EndBug/add-and-commit@v9
-  #       with:
-  #         default_author: github_actions
-  #         message: "bumps schema versions [skip actions]"
-  #         add: 'src'
 
-  bump_version_and_update_schemas:
-    # needs: bump_versions
+  bump_version:
     runs-on: ubuntu-latest
     env:
-      SCHEMAS_DIR: 'schemas'
+      OUTPUT_DIR: 'schemas'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -78,8 +47,6 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: 3.8
-      - name: Install dependencies
-        run: python -m pip install -e . --no-cache-dir
       - name: Build current branch schemas
         run: |
           mkdir /tmp/branch_schemas
@@ -87,22 +54,44 @@ jobs:
           echo "Finished building current branch schemas"
       - name: Bump schema versions
         run: |
-          python -m aind_data_schema.utils.schema_version_bump --old-schema-folder $SCHEMAS_DIR --new-schema-folder /tmp/branch_schemas --core-schemas-folder src/aind_data_schema/core
+          python -m aind_data_schema.utils.schema_version_bump --new-schema-folder /tmp/branch_schemas
           echo "Finished schema version bump" 
-      - name: Create new schemas
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          message: "bump schema version [skip actions]"
+          add: '["schemas", "src"]'
+
+  update_schemas:
+    runs-on: ubuntu-latest
+    needs: bump_version
+    env:
+      OUTPUT_DIR: 'schemas'
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ env.DEFAULT_BRANCH }}
+          fetch-depth: 0
+          token: ${{ secrets.SERVICE_TOKEN }}
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.8 
+      - name: Create schemas
         run: |
-          rm -rf $SCHEMAS_DIR
+          rm -rf $OUTPUT_DIR
           python -m pip install -e .
-          python -m aind_data_schema.utils.json_writer --output $SCHEMAS_DIR
-          echo "Finished building latest schemas"
+          python -m aind_data_schema.utils.json_writer --output $OUTPUT_DIR
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
           message: "updates schemas [skip actions]"
-          add: '["schemas", "src"]'
+          add: 'schemas'
+
   # tag:
-  #   needs: [update_docs, update_schemas]
+  #   needs: update_docs
   #   uses: AllenNeuralDynamics/aind-github-actions/.github/workflows/tag.yml@main
   #   secrets:
   #     SERVICE_TOKEN: ${{ secrets.SERVICE_TOKEN }} # required
