--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -5,33 +5,33 @@ on:
       - main
 
 jobs:
-  # update_docs:
-  #   runs-on: ubuntu-latest
-  #   continue-on-error: true
-  #   env:
-  #     DIAGRAM_DIRECTORY: ./docs/source/_static/diagrams
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         ref: ${{ env.DEFAULT_BRANCH }}
-  #         fetch-depth: 0
-  #         token: ${{ secrets.SERVICE_TOKEN }}
-  #     - name: Set up Python 3.8
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: 3.8
-  #     - name: Install dependencies
-  #       run: python -m pip install -e .[dev] --no-cache-dir
-  #     - name: Generate new rst files
-  #       run: |
-  #         sphinx-apidoc -o docs/source/ src
-  #         sphinx-build -b html docs/source/ docs/build/html
-  #     - name: Commit changes
-  #       uses: EndBug/add-and-commit@v9
-  #       with:
-  #         default_author: github_actions
-  #         message: "updates diagrams [skip actions]"
-  #         add: '["*.png", "*.rst"]'
+  update_docs:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    env:
+      DIAGRAM_DIRECTORY: ./docs/source/_static/diagrams
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ env.DEFAULT_BRANCH }}
+          fetch-depth: 0
+          token: ${{ secrets.SERVICE_TOKEN }}
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: python -m pip install -e .[dev] --no-cache-dir
+      # - name: Generate new rst files
+      #   run: |
+      #     sphinx-apidoc -o docs/source/ src
+      #     sphinx-build -b html docs/source/ docs/build/html
+      # - name: Commit changes
+      #   uses: EndBug/add-and-commit@v9
+      #   with:
+      #     default_author: github_actions
+      #     message: "updates diagrams [skip actions]"
+      #     add: '["*.png", "*.rst"]'
 
   bump_version:
     runs-on: ubuntu-latest
