--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -35,8 +35,6 @@ jobs:
 
   bump_version:
     runs-on: ubuntu-latest
-    env:
-      OUTPUT_DIR: 'schemas'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -63,7 +61,7 @@ jobs:
         with:
           default_author: github_actions
           message: "bump schema version [skip actions]"
-          add: '["schemas", "src"]'
+          add: 'src'
 
   update_schemas:
     runs-on: ubuntu-latest
