--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -86,6 +86,7 @@ jobs:
           rm -rf $OUTPUT_DIR
           python -m pip install -e .
           python -m aind_data_schema.utils.json_writer --output $OUTPUT_DIR
+          git diff HEAD  --name-only
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
