modify schema description (#14)

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -56,6 +56,7 @@ jobs:
         run: |
           python -m aind_data_schema.utils.schema_version_bump --new-schema-folder /tmp/branch_schemas
           echo "Finished schema version bump"
+          grep -E '^ *schema_version:' src/aind_data_schema/core/acquisition.py
           git diff HEAD  --name-only
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
