--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -33,40 +33,40 @@ jobs:
       #     message: "updates diagrams [skip actions]"
       #     add: '["*.png", "*.rst"]'
 
-  bump_version:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ env.DEFAULT_BRANCH }}
-          fetch-depth: 0
-          token: ${{ secrets.SERVICE_TOKEN }}
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: python -m pip install -e .[dev] --no-cache-dir
-      - name: Build current branch schemas
-        run: |
-          mkdir /tmp/branch_schemas
-          python -m aind_data_schema.utils.json_writer --output /tmp/branch_schemas
-          echo "Finished building current branch schemas"
-      - name: Bump schema versions
-        run: |
-          echo $PWD
-          python -m aind_data_schema.utils.schema_version_bump --new-schema-folder /tmp/branch_schemas
-          echo "Finished schema version bump"
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          default_author: github_actions
-          message: "bump schema version [skip actions]"
-          add: 'src'
+  # bump_version:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         ref: ${{ env.DEFAULT_BRANCH }}
+  #         fetch-depth: 0
+  #         token: ${{ secrets.SERVICE_TOKEN }}
+  #     - name: Set up Python 3.8
+  #       uses: actions/setup-python@v3
+  #       with:
+  #         python-version: 3.8
+  #     - name: Install dependencies
+  #       run: python -m pip install -e .[dev] --no-cache-dir
+  #     - name: Build current branch schemas
+  #       run: |
+  #         mkdir /tmp/branch_schemas
+  #         python -m aind_data_schema.utils.json_writer --output /tmp/branch_schemas
+  #         echo "Finished building current branch schemas"
+  #     - name: Bump schema versions
+  #       run: |
+  #         echo $PWD
+  #         python -m aind_data_schema.utils.schema_version_bump --new-schema-folder /tmp/branch_schemas
+  #         echo "Finished schema version bump"
+  #     - name: Commit changes
+  #       uses: EndBug/add-and-commit@v9
+  #       with:
+  #         default_author: github_actions
+  #         message: "bump schema version [skip actions]"
+  #         add: 'src'
 
   update_schemas:
     runs-on: ubuntu-latest
-    needs: bump_version
+    # needs: bump_version
     env:
       OUTPUT_DIR: 'schemas'
     steps:
@@ -92,7 +92,6 @@ jobs:
           default_author: github_actions
           message: "updates schemas [skip actions]"
           add: 'schemas'
-          pull: '--rebase'
 
   # tag:
   #   needs: update_docs
