--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -33,8 +33,10 @@ jobs:
       #     message: "updates diagrams [skip actions]"
       #     add: '["*.png", "*.rst"]'
 
-  bump_version:
+  bump_versions_and_update_schemas:
     runs-on: ubuntu-latest
+    env:
+      OUTPUT_DIR: 'schemas'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -57,30 +59,6 @@ jobs:
           echo $PWD
           python -m aind_data_schema.utils.schema_version_bump --new-schema-folder /tmp/branch_schemas
           echo "Finished schema version bump"
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          default_author: github_actions
-          message: "bump schema version [skip actions]"
-          add: 'src'
-
-  update_schemas:
-    runs-on: ubuntu-latest
-    needs: bump_version
-    env:
-      OUTPUT_DIR: 'schemas'
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ env.DEFAULT_BRANCH }}
-          fetch-depth: 0
-          token: ${{ secrets.SERVICE_TOKEN }}
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: python -m pip install -e .[dev] --no-cache-dir
       - name: Create schemas
         run: |
           rm -rf $OUTPUT_DIR
@@ -90,8 +68,37 @@ jobs:
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          message: "updates schemas [skip actions]"
-          add: 'schemas'
+          message: "bump schema version [skip actions]"
+          add: '["src", "schemas"]'
+
+  # update_schemas:
+  #   runs-on: ubuntu-latest
+  #   needs: bump_version
+  #   env:
+  #     OUTPUT_DIR: 'schemas'
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         ref: ${{ env.DEFAULT_BRANCH }}
+  #         fetch-depth: 0
+  #         token: ${{ secrets.SERVICE_TOKEN }}
+  #     - name: Set up Python 3.8
+  #       uses: actions/setup-python@v3
+  #       with:
+  #         python-version: 3.8
+  #     - name: Install dependencies
+  #       run: python -m pip install -e .[dev] --no-cache-dir
+  #     - name: Create schemas
+  #       run: |
+  #         rm -rf $OUTPUT_DIR
+  #         python -m pip install -e .
+  #         python -m aind_data_schema.utils.json_writer --output $OUTPUT_DIR
+  #     - name: Commit changes
+  #       uses: EndBug/add-and-commit@v9
+  #       with:
+  #         default_author: github_actions
+  #         message: "updates schemas [skip actions]"
+  #         add: 'schemas'
 
   # tag:
   #   needs: update_docs
