--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -64,12 +64,17 @@ jobs:
           rm -rf $OUTPUT_DIR
           python -m pip install -e .
           python -m aind_data_schema.utils.json_writer --output $OUTPUT_DIR
+      - name: Create example schemas
+        run: |
+          for script in examples/*.py; do
+              python "$script"
+          done
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
           message: "bump schema version [skip actions]"
-          add: '["src", "schemas"]'
+          add: '["src", "schemas", "examples"]'
 
   # update_schemas:
   #   runs-on: ubuntu-latest
