--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,38 +1,10 @@
-name: Bump version
+name: Tag and Publish
 on:
   push:
     branches:
       - main
 
 jobs:
-  update_docs:
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    env:
-      DIAGRAM_DIRECTORY: ./docs/source/_static/diagrams
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ env.DEFAULT_BRANCH }}
-          fetch-depth: 0
-          token: ${{ secrets.SERVICE_TOKEN }}
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: python -m pip install -e .[dev] --no-cache-dir
-      # - name: Generate new rst files
-      #   run: |
-      #     sphinx-apidoc -o docs/source/ src
-      #     sphinx-build -b html docs/source/ docs/build/html
-      # - name: Commit changes
-      #   uses: EndBug/add-and-commit@v9
-      #   with:
-      #     default_author: github_actions
-      #     message: "updates diagrams [skip actions]"
-      #     add: '["*.png", "*.rst"]'
-
   bump_versions_and_update_schemas:
     runs-on: ubuntu-latest
     env:
@@ -49,11 +21,6 @@ jobs:
           python-version: 3.8
       - name: Install dependencies
         run: python -m pip install -e .[dev] --no-cache-dir
-      # - name: Build current branch schemas
-      #   run: |
-      #     mkdir /tmp/branch_schemas
-      #     python -m aind_data_schema.utils.json_writer --output /tmp/branch_schemas
-      #     echo "Finished building current branch schemas"
       - name: Bump schema versions
         run: |
           python -m aind_data_schema.utils.schema_version_bump
@@ -65,7 +32,8 @@ jobs:
           python -m aind_data_schema.utils.json_writer --output $OUTPUT_DIR
       - name: Create example schemas
         run: |
-          for script in examples/*.py; do
+          cd examples
+          for script in ./*.py; do
               python "$script"
           done
       - name: Commit changes
@@ -74,59 +42,3 @@ jobs:
           default_author: github_actions
           message: "bump schema version [skip actions]"
           add: '["src", "schemas", "examples"]'
-
-  # update_schemas:
-  #   runs-on: ubuntu-latest
-  #   needs: bump_version
-  #   env:
-  #     OUTPUT_DIR: 'schemas'
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         ref: ${{ env.DEFAULT_BRANCH }}
-  #         fetch-depth: 0
-  #         token: ${{ secrets.SERVICE_TOKEN }}
-  #     - name: Set up Python 3.8
-  #       uses: actions/setup-python@v3
-  #       with:
-  #         python-version: 3.8
-  #     - name: Install dependencies
-  #       run: python -m pip install -e .[dev] --no-cache-dir
-  #     - name: Create schemas
-  #       run: |
-  #         rm -rf $OUTPUT_DIR
-  #         python -m pip install -e .
-  #         python -m aind_data_schema.utils.json_writer --output $OUTPUT_DIR
-  #     - name: Commit changes
-  #       uses: EndBug/add-and-commit@v9
-  #       with:
-  #         default_author: github_actions
-  #         message: "updates schemas [skip actions]"
-  #         add: 'schemas'
-
-  # tag:
-  #   needs: update_docs
-  #   uses: AllenNeuralDynamics/aind-github-actions/.github/workflows/tag.yml@main
-  #   secrets:
-  #     SERVICE_TOKEN: ${{ secrets.SERVICE_TOKEN }} # required
-
-  # publish:
-  #   needs: tag
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Pull latest changes
-  #       run: git pull origin main
-  #     - name: Set up Python 3.8
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: 3.8
-  #     - name: Install dependencies
-  #       run: |
-  #         pip install --upgrade setuptools wheel twine build
-  #         python -m build
-  #         twine check dist/*
-  #     - name: Publish on PyPI
-  #       uses: pypa/gh-action-pypi-publish@release/v1.5
-  #       with:
-  #         password: ${{ secrets.AIND_PYPI_TOKEN }}
