--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -78,26 +78,26 @@ jobs:
     secrets:
       SERVICE_TOKEN: ${{ secrets.SERVICE_TOKEN }} # required
 
-  publish:
-    needs: tag
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Pull latest changes
-        run: git pull origin main
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: |
-          pip install --upgrade setuptools wheel twine build
-          python -m build
-          twine check dist/*
-      - name: Publish on PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1.5
-        with:
-          password: ${{ secrets.AIND_PYPI_TOKEN }}
+  # publish:
+  #   needs: tag
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Pull latest changes
+  #       run: git pull origin main
+  #     - name: Set up Python 3.8
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: 3.8
+  #     - name: Install dependencies
+  #       run: |
+  #         pip install --upgrade setuptools wheel twine build
+  #         python -m build
+  #         twine check dist/*
+  #     - name: Publish on PyPI
+  #       uses: pypa/gh-action-pypi-publish@release/v1.5
+  #       with:
+  #         password: ${{ secrets.AIND_PYPI_TOKEN }}
 
   # upload_schemas_prod:
   #   needs: publish
