docs: fix sudo errors

--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -61,7 +61,7 @@ jobs:
           python-version: 3.8
       - name: Install dependencies
         run: |
-          apt install graphviz libgraphviz-dev -y
+          sudo apt install graphviz libgraphviz-dev -y
           python -m pip install -e .[dev] -e .[docs] --no-cache-dir
       - name: Generate erdantic diagrams
         run: |
