--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Generate erdantic diagrams
         run: |
           mkdir docs/source/diagrams
-          python -m aind_data_schema.utils.diagrams docs/source/diagrams
+          python -m aind_data_schema.utils.diagrams $DIAGRAM_DIRECTORY
       - name: Generate new rst files
         run: |
           sphinx-apidoc -o docs/source/ src
@@ -76,7 +76,7 @@ jobs:
         with:
           default_author: github_actions
           message: "updates diagrams [skip actions]"
-          add: '["*.png", "*.rst"]'
+          add: '["*.svg", "*.rst"]'
 
   tag:
     needs: update_docs
