--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -63,10 +63,10 @@ jobs:
         run: |
           sudo apt install graphviz libgraphviz-dev -y
           python -m pip install -e .[dev] -e .[docs] --no-cache-dir
-      - name: Generate erdantic diagrams
-        run: |
-          mkdir ./docs/source/_static/diagrams
-          python -m aind_data_schema.utils.diagrams $DIAGRAM_DIRECTORY
+      # - name: Generate erdantic diagrams
+      #   run: |
+      #     mkdir ./docs/source/_static/diagrams
+      #     python -m aind_data_schema.utils.diagrams $DIAGRAM_DIRECTORY
       - name: Generate new rst files
         run: |
           sphinx-apidoc -o docs/source/ src
@@ -76,7 +76,7 @@ jobs:
         with:
           default_author: github_actions
           message: "updates diagrams [skip actions]"
-          add: '["*.svg", "*.rst"]'
+          add: '["*.rst"]'
 
   tag:
     needs: update_docs
