--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -71,6 +71,7 @@ jobs:
         run: |
           sphinx-apidoc -o docs/source/ src
           sphinx-build -b html docs/source/ docs/build/html
+          sphinx-build -b html docs/source/ docs/build/html
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
