--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -47,8 +47,8 @@ jobs:
     needs: bump_versions_and_update_schemas
     runs-on: ubuntu-latest
     continue-on-error: true
-    env:
-      DIAGRAM_DIRECTORY: ./docs/source/_static/diagrams
+    # env:
+    #   DIAGRAM_DIRECTORY: ./docs/source/_static/diagrams
     steps:
       - uses: actions/checkout@v3
         with:
@@ -60,18 +60,15 @@ jobs:
         with:
           python-version: 3.8
       - name: Install dependencies
-        run: |
-          sudo apt install graphviz libgraphviz-dev -y
-          python -m pip install -e .[dev] -e .[docs] --no-cache-dir
+        # run: sudo apt install graphviz libgraphviz-dev -y
+        run: python -m pip install -e .[dev] -e .[docs] --no-cache-dir
       # - name: Generate erdantic diagrams
       #   run: |
       #     mkdir ./docs/source/_static/diagrams
       #     python -m aind_data_schema.utils.diagrams $DIAGRAM_DIRECTORY
       - name: Generate new rst files
-        run: |
-          sphinx-apidoc -o docs/source/ src
-          sphinx-build -b html docs/source/ docs/build/html
-          sphinx-build -b html docs/source/ docs/build/html
+        run: sphinx-apidoc -o docs/source/ src
+        # run: sphinx-build -b html docs/source/ docs/build/html
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
