add graphviz dependency

--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -60,8 +60,9 @@ jobs:
         with:
           python-version: 3.8
       - name: Install dependencies
-        # run: sudo apt install graphviz libgraphviz-dev -y
-        run: python -m pip install -e .[dev] -e .[docs] --no-cache-dir
+        run: |
+          sudo apt install graphviz libgraphviz-dev -y
+          python -m pip install -e .[dev] -e .[docs] --no-cache-dir
       # - name: Generate erdantic diagrams
       #   run: |
       #     mkdir ./docs/source/_static/diagrams
