--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -104,7 +104,7 @@ jobs:
       uses: EndBug/add-and-commit@v9
       with:
         default_author: github_actions
-        message: "updates diagrams [skip actions]"
+        message: "updates changelogs [skip actions]"
         add: '["CHANGELOGS.md"]'
   # publish:
   #   needs: tag
