--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -71,14 +71,8 @@ jobs:
           message: "updates diagrams [skip actions]"
           add: '["*.rst"]'
 
-  tag:
+  changelog:
     needs: update_docs
-    uses: AllenNeuralDynamics/aind-github-actions/.github/workflows/tag.yml@main
-    secrets:
-      SERVICE_TOKEN: ${{ secrets.SERVICE_TOKEN }} # required
-  
-  changelogs:
-    name: changelogs
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -104,6 +98,13 @@ jobs:
         default_author: github_actions
         message: "updates changelogs [skip actions]"
         add: '["CHANGELOGS.md"]'
+
+  tag:
+    needs: changelog
+    uses: AllenNeuralDynamics/aind-github-actions/.github/workflows/tag.yml@main
+    secrets:
+      SERVICE_TOKEN: ${{ secrets.SERVICE_TOKEN }} # required
+
   # publish:
   #   needs: tag
   #   runs-on: ubuntu-latest
