ci: adds pull to commit changes step

--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -96,6 +96,7 @@ jobs:
       with:
         default_author: github_actions
         message: "updates changelogs [skip actions]"
+        pull: '--rebase'
         add: '["CHANGELOG.md"]'
 
   tag:
