--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -81,6 +81,8 @@ jobs:
         ref: ${{ env.DEFAULT_BRANCH }}
         fetch-depth: 0
         token: ${{ secrets.SERVICE_TOKEN }}
+    - name: Pull changes
+      run: git pull
     - name: Compute new version number
       id: tag_version
       uses: mathieudutour/github-tag-action@v6.1
@@ -96,7 +98,6 @@ jobs:
       with:
         default_author: github_actions
         message: "updates changelogs [skip actions]"
-        pull: '--rebase'
         add: '["CHANGELOG.md"]'
 
   tag:
