--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -15,6 +15,8 @@ jobs:
           ref: ${{ env.DEFAULT_BRANCH }}
           fetch-depth: 0
           token: ${{ secrets.SERVICE_TOKEN }}
+      - name: Pull changes
+        run: git pull
       - name: Set up Python 3.8
         uses: actions/setup-python@v3
         with:
