--- a/.github/workflows/tag_and_publish.yml
+++ b/.github/workflows/tag_and_publish.yml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.SERVICE_TOKEN }}
       - name: Pull changes
-        run: git pull
+        run: git pull --rebase
       - name: Set up Python 3.8
         uses: actions/setup-python@v3
         with:
@@ -56,7 +56,7 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.SERVICE_TOKEN }}
       - name: Pull changes
-        run: git pull
+        run: git pull --rebase
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
@@ -86,7 +86,7 @@ jobs:
         fetch-depth: 0
         token: ${{ secrets.SERVICE_TOKEN }}
     - name: Pull changes
-      run: git pull
+      run: git pull --rebase
     - name: Compute new version number
       id: tag_version
       uses: mathieudutour/github-tag-action@v6.1
