ci: modifies tag workflow branch

--- a/.github/workflows/tag_and_publish_dev.yml
+++ b/.github/workflows/tag_and_publish_dev.yml
@@ -5,6 +5,10 @@ on:
       - dev
 
 jobs:
+  tag:
+    uses: AllenNeuralDynamics/aind-github-actions/.github/workflows/tag.yml@allow-for-whitespace-in-name-step-of-tag-workflow
+    secrets:
+      SERVICE_TOKEN: ${{ secrets.SERVICE_TOKEN }} # required
   upload_schemas_dev:
     runs-on: ubuntu-latest
     permissions:
